fix category fied style on mobile devices

--- a/src/styles/menu-screen.css
+++ b/src/styles/menu-screen.css
@@ -47,6 +47,7 @@
   .menu-categories_label > select {
     margin-top: 0.5rem;
     margin-left: 0;
+    padding: 0.6rem 0.2rem;
   }
 
   .menu_btn {
